--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "lite-server": "^2.4.0"
   },
   "dependencies": {
-    "solc": "^0.6.0"
+    "@openzeppelin/contracts": "^4.8.0",
+    "solc": "^0.6.0",
+    "truffle-hdwallet-provider": "^1.0.17"
   }
 }
